Modifique el link de style.css porque no me cargaba en el localhost8080. Baje un poco la altura del modal

--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
          <!-- CSS -->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/style.css?v=1.2"> 
+        <!-- ?v=1.2 agregado porque no me funcionaba el css en localhost:8080-->
         <title>Arma rutina</title>
     </head>
     <body>
@@ -116,7 +117,7 @@
                                                 <option value="min">Min</option>
                                                 <option value="hs">Hs</option>
                                             </select>
-                                    </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
