Solucione el proble de que no aparecia la descripcion

--- a/Proyecto TP/frontend/html/comidas.html
+++ b/Proyecto TP/frontend/html/comidas.html
@@ -308,6 +308,9 @@
 
                 const idComida = formCom_editar.dataset.comidaId;
 
+                console.log("Valor de descripción antes de PUT:", formCom_editar.descripcion.value);
+
+
                 const datosEditados = {
                     nombre_comida: formCom_editar.nombre_comida.value,
                     tipo_comida: formCom_editar.tipo_comida.value,
@@ -315,7 +318,7 @@
                     proteinas: parseInt(formCom_editar.proteinas.value),
                     carbohidratos: parseInt(formCom_editar.carbohidratos.value),
                     grasas: parseInt(formCom_editar.grasas.value),
-                    descripcion: formCom_editar.descripcion.value
+                    descripcion: formCom_editar.descripcion.value,
                 };
 
                 try {
@@ -325,6 +328,7 @@
                         formCom_editar.reset();
                         tablaComidas();
                         alert("Comida editada correctamente");
+                        console.log("Descripcion", datosEditados.descripcion);                 
                     } else {
                         alert("Error al editar la comida");
                     }
