--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -74,10 +74,10 @@
                                             <option value="" disabled selected>Seleccioná un dia</option>
                                             <option value="Lunes">Lunes</option>
                                             <option value="Martes">Martes</option>
-                                            <option value="Miercoles">Miercoles</option>
+                                            <option value="Miércoles">Miércoles</option>
                                             <option value="Jueves">Jueves</option>
                                             <option value="Viernes">Viernes</option>
-                                            <option value="Sabado">Sabado</option>
+                                            <option value="Sábado">Sábado</option>
                                             <option value="Domingo">Domingo</option>
                                         </select>
                                     </div>
@@ -154,10 +154,10 @@
                                             <option value="" disabled selected>Seleccioná un dia</option>
                                             <option value="Lunes">Lunes</option>
                                             <option value="Martes">Martes</option>
-                                            <option value="Miercoles">Miércoles</option>
+                                            <option value="Miércoles">Miércoles</option>
                                             <option value="Jueves">Jueves</option>
                                             <option value="Viernes">Viernes</option>
-                                            <option value="Sabado">Sábado</option>
+                                            <option value="Sábado">Sábado</option>
                                             <option value="Domingo">Domingo</option>
                                         </select>
                                     </div>
